opencli-rs/tui/src/bottom_pane/snapshots/opencli_tui__bottom_pane__tests__status_and_composer_fill_height_without_bottom_padding.snap
---
source: tui/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
⏺ Processing (0s • esc to inte
                              
                              
› Ask OpenCLI to do anything  
                              
           100% context left
