opencli-rs/tui/src/bottom_pane/snapshots/opencli_tui__bottom_pane__tests__status_and_queued_messages_snapshot.snap
---
source: tui/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
⏺ Processing (0s • esc to interrupt)            
                                                
  ↳ Queued follow-up question                   
    ⌥ + ↑ edit                                  
                                                
› Ask OpenCLI to do anything                    
                                                
  ? for shortcuts            100% context left
