opencli-rs/tui/src/bottom_pane/snapshots/opencli_tui__bottom_pane__tests__status_only_snapshot.snap
---
source: tui/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
⏺ Processing (0s • esc to interrupt)            
                                                
                                                
› Ask OpenCLI to do anything                    
                                                
  ? for shortcuts            100% context left
